--- a/Individual Assignment (Project).ipynb
+++ b/Individual Assignment (Project).ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -263,7 +263,7 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'Graduation'</li><li>'PhD'</li><li>'Master'</li><li>'Basic'</li></ol>\n"
+       "<ol class=list-inline><li>'Graduation'</li><li>'PhD'</li><li>'Master'</li><li>'Basic'</li><li>'2n Cycle'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
@@ -271,6 +271,7 @@
        "\\item 'PhD'\n",
        "\\item 'Master'\n",
        "\\item 'Basic'\n",
+       "\\item '2n Cycle'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
@@ -278,11 +279,12 @@
        "2. 'PhD'\n",
        "3. 'Master'\n",
        "4. 'Basic'\n",
+       "5. '2n Cycle'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] \"Graduation\" \"PhD\"        \"Master\"     \"Basic\"     "
+       "[1] \"Graduation\" \"PhD\"        \"Master\"     \"Basic\"      \"2n Cycle\"  "
       ]
      },
      "metadata": {},
@@ -296,43 +298,44 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'Single'</li><li>'Married'</li><li>'Divorced'</li><li>'Widow'</li></ol>\n"
+       "<ol class=list-inline><li>'Single'</li><li>'Together'</li><li>'Married'</li><li>'Divorced'</li><li>'Widow'</li><li>'Alone'</li><li>'Absurd'</li><li>'YOLO'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
        "\\item 'Single'\n",
+       "\\item 'Together'\n",
        "\\item 'Married'\n",
        "\\item 'Divorced'\n",
        "\\item 'Widow'\n",
+       "\\item 'Alone'\n",
+       "\\item 'Absurd'\n",
+       "\\item 'YOLO'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
        "1. 'Single'\n",
-       "2. 'Married'\n",
-       "3. 'Divorced'\n",
-       "4. 'Widow'\n",
+       "2. 'Together'\n",
+       "3. 'Married'\n",
+       "4. 'Divorced'\n",
+       "5. 'Widow'\n",
+       "6. 'Alone'\n",
+       "7. 'Absurd'\n",
+       "8. 'YOLO'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] \"Single\"   \"Married\"  \"Divorced\" \"Widow\"   "
+       "[1] \"Single\"   \"Together\" \"Married\"  \"Divorced\" \"Widow\"    \"Alone\"    \"Absurd\"  \n",
+       "[8] \"YOLO\"    "
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " num [1:2240] 8 1 8 2 5 6 7 4 3 1 ...\n"
-     ]
     }
    ],
    "source": [
     "unique(market_data$Education)   # Possible covariates to be used as factor variables for research model\n",
-    "unique(market_data$Marital_Status)     # Possible covariates to be used as factor variables for research model, to classify YOLO as single?\n",
-    "unique(market_data$NumWebPurchases)"
+    "unique(market_data$Marital_Status)     # Possible covariates to be used as factor variables for research model, to classify YOLO as single?"
    ]
   },
   {
