Added the Markdown cell for the description of the variable.

--- a/Individual Assignment (Project).ipynb
+++ b/Individual Assignment (Project).ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STAT301 2024W2 Group 26 Project \n",
+    "### Loading of Libraries & Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -36,15 +44,6 @@
     "library(GGally)\n",
     "library(coefplot)\n",
     "})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction & Data Description\n",
-    "\n",
-    "The assigned dataset for the project is the Customer Personality Analysis found on https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis/data. In this project, the code below show the descriptive summary of the dataset. There are 2240 observations and 28 variables which captures various attrributes about customers which includes their demographic information, responses to marketing campaigns and purchase history."
    ]
   },
   {
@@ -212,6 +211,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " chr [1:2240] \"04-09-2012\" \"08-03-2014\" \"21-08-2013\" \"10-02-2014\" ...\n"
+     ]
     }
    ],
    "source": [
@@ -221,7 +227,59 @@
     "# Check the structure of data types \n",
     "str(market_data)\n",
     "\n",
-    "head(market_data)\n"
+    "head(market_data)\n",
+    "str(market_data$Dt_Customer)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction & Data Description\n",
+    "\n",
+    "The assigned dataset for the project is the Customer Personality Analysis found on In this project, the code below show the descriptive summary of the dataset. There are 2240 observations and 28 variables which captures various attrributes about customers which includes their demographic information, responses to marketing campaigns and purchase history."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Description\n",
+    "\n",
+    "This dataset consists of marketing campaign data for a company, with 2,240 observations and 28 variables. The data captures various attributes about customers, including demographic information, purchase history, and responses to marketing campaigns.\n",
+    "\n",
+    "| **Variable Name**       | **Type**     | **Description**                                               |\n",
+    "|-------------------------|--------------|---------------------------------------------------------------|\n",
+    "| `ID`                    | Character    | Unique identifier for each customer                           |\n",
+    "| `Year_Birth`            | Numeric      | Year of birth of the customer                                 |\n",
+    "| `Education`             | Character    | Education level of the customer                               |\n",
+    "| `Marital_Status`        | Character    | Marital status of the customer                                |\n",
+    "| `Income`                | Double       | Annual income of the customer                                 |\n",
+    "| `Kidhome`               | Numeric      | Number of children in the customer's household                |\n",
+    "| `Teenhome`              | Numeric      | Number of teenagers in the customer's household               |\n",
+    "| `Dt_Customer`           | Character    | Date of enrollment with the company                           |\n",
+    "| `Recency`               | Numeric      | Days since the last purchase                                  |\n",
+    "| `MntWines`              | Numeric      | Amount spent on wine                                          |\n",
+    "| `MntFruits`             | Numeric      | Amount spent on fruits                                        |\n",
+    "| `MntMeatProducts`       | Numeric      | Amount spent on meat products                                 |\n",
+    "| `MntFishProducts`       | Numeric      | Amount spent on fish products                                 |\n",
+    "| `MntSweetProducts`      | Numeric      | Amount spent on sweet products                                |\n",
+    "| `MntGoldProds`          | Numeric      | Amount spent on gold products                                 |\n",
+    "| `NumDealsPurchases`     | Numeric      | Number of purchases made with a discount                      |\n",
+    "| `NumWebPurchases`       | Numeric      | Number of purchases made through the web                      |\n",
+    "| `NumCatalogPurchases`   | Numeric      | Number of purchases made using a catalog                      |\n",
+    "| `NumStorePurchases`     | Numeric      | Number of purchases made directly in stores                   |\n",
+    "| `NumWebVisitsMonth`     | Numeric      | Number of visits to the company's website in the last month   |\n",
+    "| `AcceptedCmp3`          | Numeric      | 1 if the customer accepted the 3rd campaign, 0 otherwise      |\n",
+    "| `AcceptedCmp4`          | Numeric      | 1 if the customer accepted the 4th campaign, 0 otherwise      |\n",
+    "| `AcceptedCmp5`          | Numeric      | 1 if the customer accepted the 5th campaign, 0 otherwise      |\n",
+    "| `AcceptedCmp1`          | Numeric      | 1 if the customer accepted the 1st campaign, 0 otherwise      |\n",
+    "| `AcceptedCmp2`          | Numeric      | 1 if the customer accepted the 2nd campaign, 0 otherwise      |\n",
+    "| `Response`              | Numeric      | 1 if the customer accepted the last campaign, 0 otherwise     |\n",
+    "| `Complain`              | Numeric      | 1 if the customer has complained in the last 2 years, 0 otherwise |\n",
+    "| `Country`               | Character    | Country of the customer                                       |\n",
+    "\n",
+    "**Data Source**: The dataset was collected as part of a marketing campaign analysis. https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis/data\n"
    ]
   },
   {
@@ -236,14 +294,7 @@
     "\n",
     "How is customer income related to their spending patterns, specifically the number of web purchases, catalog purchases, store purchases, and website visits, and how do education level and marital status influence these spending behaviors?\n",
     "\n",
-    "**<br> Legend:**\n",
-    "- `Income` is the response variable where it measured in USD.\n",
-    "- `Education` is a qualitative variable that takes 4 values for different level of education as in the code below.\n",
-    "- `Marital_Status` is a dummy variable that indicates `1` if the respondent is married, otherwise 0.\n",
-    "- `NumWebPurchases` is the number of web purchases through the company's website. \n",
-    "- `NumCatalogPurchases` is the number of purchases made through the Catalogue.\n",
-    "- `NumStorePurchases` is the number of purchases that's made in person in stores.\n",
-    "- `NumWebVisitsMonth` is the number of visits to the company's website in the past month"
+    "**<br> Legend:**\n"
    ]
   },
   {
@@ -1965,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2016,14 +2067,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = length ~ age, data = Mandible, subset = (age <= \n",
+       "    28))\n",
+       "\n",
+       "Residuals:\n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-9.2013 -1.6592 -0.1217  1.3420  6.4351 \n",
+       "\n",
+       "Coefficients:\n",
+       "            Estimate Std. Error t value Pr(>|t|)    \n",
+       "(Intercept) -11.9534     0.9762  -12.24   <2e-16 ***\n",
+       "age           1.7727     0.0477   37.16   <2e-16 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Residual standard error: 2.373 on 156 degrees of freedom\n",
+       "Multiple R-squared:  0.8985,\tAdjusted R-squared:  0.8978 \n",
+       "F-statistic:  1381 on 1 and 156 DF,  p-value: < 2.2e-16\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "t test of coefficients:\n",
+       "\n",
+       "              Estimate Std. Error t value  Pr(>|t|)    \n",
+       "(Intercept) -11.953366   0.976227 -12.245 < 2.2e-16 ***\n",
+       "age           1.772730   0.047704  37.161 < 2.2e-16 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "z test of coefficients:\n",
+       "\n",
+       "              Estimate Std. Error z value  Pr(>|z|)    \n",
+       "(Intercept) -11.953366   0.976227 -12.245 < 2.2e-16 ***\n",
+       "age           1.772730   0.047704  37.161 < 2.2e-16 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "z test of coefficients:\n",
+       "\n",
+       "              Estimate Std. Error z value  Pr(>|z|)    \n",
+       "(Intercept) -11.953366   1.009817 -11.837 < 2.2e-16 ***\n",
+       "age           1.772730   0.054343  32.621 < 2.2e-16 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data(Mandible)\n",
+    "fm <- lm(length ~ age, data=Mandible, subset=(age <= 28))\n",
+    "\n",
+    "## the following commands lead to the same tests:\n",
+    "summary(fm)\n",
+    "coeftest(fm)\n",
+    "\n",
+    "## a z test (instead of a t test) can be performed by\n",
+    "coeftest(fm, df = Inf)\n",
+    "\n",
+    "if(require(sandwich)) {\n",
+    "## a different covariance matrix can be also used:\n",
+    "## either supplied as a function\n",
+    "coeftest(fm, df = Inf, vcov = vcovHC)\n",
+    "## or as a matrix\n",
+    "coeftest(fm, df = Inf, vcov = vcovHC(fm, type = \"HC0\"))\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
