Added some minor changes

--- a/Individual Assignment (Project).ipynb
+++ b/Individual Assignment (Project).ipynb
@@ -254,7 +254,7 @@
     "| `Year_Birth`            | Numeric      | Year of birth of the customer                                 |\n",
     "| `Education`             | Character    | Education level of the customer                               |\n",
     "| `Marital_Status`        | Character    | Marital status of the customer                                |\n",
-    "| `Income`                | Double       | Annual income of the customer                                 |\n",
+    "| `Income`                | Numeric      | Annual income of the customer                                 |\n",
     "| `Kidhome`               | Numeric      | Number of children in the customer's household                |\n",
     "| `Teenhome`              | Numeric      | Number of teenagers in the customer's household               |\n",
     "| `Dt_Customer`           | Character    | Date of enrollment with the company                           |\n",
@@ -279,7 +279,7 @@
     "| `Complain`              | Numeric      | 1 if the customer has complained in the last 2 years, 0 otherwise |\n",
     "| `Country`               | Character    | Country of the customer                                       |\n",
     "\n",
-    "**Data Source**: The dataset was collected as part of a marketing campaign analysis. https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis/data\n"
+    "**Data Source**: The dataset was collected as part of a marketing campaign analysis by Dr. Omar Romero-Hernandez. https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis/data\n"
    ]
   },
   {
@@ -292,9 +292,12 @@
    "source": [
     "## Research Question (Question of Interest)\n",
     "\n",
-    "How is customer income related to their spending patterns, specifically the number of web purchases, catalog purchases, store purchases, and website visits, and how do education level and marital status influence these spending behaviors?\n",
+    "Predict the amount of gold products spent is related to the different covariates or predictors such as customer's income, level of education, \n",
     "\n",
-    "**<br> Legend:**\n"
+    "\n",
+    "\n",
+    "**<br> Legend:**\n",
+    "- `MntGoldProds` is the response variable, where the amount of gold is a numeric variable\n"
    ]
   },
   {
