Fixed the stargazer section.

--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2072,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2188,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2529,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2660,7 +2660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2744,7 +2744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2834,7 +2834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2875,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -2888,108 +2888,105 @@
      "text": [
       "\n",
       "Comparison of Multiple Regression Results\n",
-      "=====================================================\n",
-      "                            Dependent variable:      \n",
-      "                      -------------------------------\n",
-      "                      NumWebPurchases                \n",
-      "                          Poisson       coefficient  \n",
-      "                                           test      \n",
-      "                            (1)             (2)      \n",
-      "-----------------------------------------------------\n",
-      "EducationGraduation    0.297666600**  0.297666600*** \n",
-      "                       (0.116313700)   (0.091525800) \n",
-      "                                                     \n",
-      "EducationMaster        0.282507600**  0.282507600*** \n",
-      "                       (0.117689400)   (0.092608780) \n",
-      "                                                     \n",
-      "EducationPhD           0.290670400**  0.290670400*** \n",
-      "                       (0.118902900)   (0.095824390) \n",
-      "                                                     \n",
-      "Marital_StatusMarried   0.002032703     0.002032703  \n",
-      "                       (0.041494170)   (0.041929170) \n",
-      "                                                     \n",
-      "Marital_StatusSingle   -0.015051110    -0.015051110  \n",
-      "                       (0.040630530)   (0.040169500) \n",
-      "                                                     \n",
-      "Marital_StatusWidow    -0.041808820    -0.041808820  \n",
-      "                       (0.070917780)   (0.067841120) \n",
-      "                                                     \n",
-      "Income                0.000002626***   0.000002626** \n",
-      "                       (0.000000428)   (0.000001127) \n",
-      "                                                     \n",
-      "Kidhome               -0.230863000*** -0.230863000***\n",
-      "                       (0.033463980)   (0.044176870) \n",
-      "                                                     \n",
-      "Teenhome               0.060306960**   0.060306960*  \n",
-      "                       (0.028629650)   (0.033308240) \n",
-      "                                                     \n",
-      "Recency                -0.000037866    -0.000037866  \n",
-      "                       (0.000442221)   (0.000486635) \n",
-      "                                                     \n",
-      "MntWines              0.000439927***  0.000439927*** \n",
-      "                       (0.000058041)   (0.000066808) \n",
-      "                                                     \n",
-      "MntFruits               0.000285682     0.000285682  \n",
-      "                       (0.000360583)   (0.000330352) \n",
-      "                                                     \n",
-      "MntMeatProducts         0.000036995     0.000036995  \n",
-      "                       (0.000085449)   (0.000082937) \n",
-      "                                                     \n",
-      "MntFishProducts        0.000612828**   0.000612828** \n",
-      "                       (0.000289703)   (0.000303788) \n",
-      "                                                     \n",
-      "MntSweetProducts      0.001056294***  0.001056294*** \n",
-      "                       (0.000353643)   (0.000323290) \n",
-      "                                                     \n",
-      "MntGoldProds          0.001339283***  0.001339283*** \n",
-      "                       (0.000245533)   (0.000480095) \n",
-      "                                                     \n",
-      "NumDealsPurchases     0.058731260***  0.058731260*** \n",
-      "                       (0.007448920)   (0.011330840) \n",
-      "                                                     \n",
-      "NumCatalogPurchases     0.009201272     0.009201272  \n",
-      "                       (0.006663828)   (0.007902631) \n",
-      "                                                     \n",
-      "NumStorePurchases     0.044291260***  0.044291260*** \n",
-      "                       (0.005166086)   (0.006642154) \n",
-      "                                                     \n",
-      "NumWebVisitsMonth     0.074302560***  0.074302560*** \n",
-      "                       (0.007117189)   (0.011987450) \n",
-      "                                                     \n",
-      "AcceptedCmp3            0.027950850     0.027950850  \n",
-      "                       (0.047997650)   (0.051688640) \n",
-      "                                                     \n",
-      "AcceptedCmp4            0.023400770     0.023400770  \n",
-      "                       (0.047497470)   (0.052441900) \n",
-      "                                                     \n",
-      "AcceptedCmp5           -0.079855880    -0.079855880  \n",
-      "                       (0.053372400)   (0.061015150) \n",
-      "                                                     \n",
-      "AcceptedCmp1            0.045068750     0.045068750  \n",
-      "                       (0.049867830)   (0.049861570) \n",
-      "                                                     \n",
-      "AcceptedCmp2          -0.344034900*** -0.344034900** \n",
-      "                       (0.100029700)   (0.142573600) \n",
-      "                                                     \n",
-      "Complain               -0.180364300    -0.180364300  \n",
-      "                       (0.175653800)   (0.161685000) \n",
-      "                                                     \n",
-      "Response                0.059834150     0.059834150  \n",
-      "                       (0.037685260)   (0.040736010) \n",
-      "                                                     \n",
-      "Constant               -0.126152000    -0.126152000  \n",
-      "                       (0.134659900)   (0.140382800) \n",
-      "                                                     \n",
-      "-----------------------------------------------------\n",
-      "Observations               1,660                     \n",
-      "Akaike Inf. Crit.     6,499.922000000                \n",
-      "=====================================================\n",
-      "Note:                     *p<0.1; **p<0.05; ***p<0.01\n"
+      "=================================================\n",
+      "                          Dependent variable:    \n",
+      "                      ---------------------------\n",
+      "                            NumWebPurchases      \n",
+      "-------------------------------------------------\n",
+      "EducationGraduation          0.297666600**       \n",
+      "                             (0.116313700)       \n",
+      "                                                 \n",
+      "EducationMaster              0.282507600**       \n",
+      "                             (0.117689400)       \n",
+      "                                                 \n",
+      "EducationPhD                 0.290670400**       \n",
+      "                             (0.118902900)       \n",
+      "                                                 \n",
+      "Marital_StatusMarried         0.002032703        \n",
+      "                             (0.041494170)       \n",
+      "                                                 \n",
+      "Marital_StatusSingle         -0.015051110        \n",
+      "                             (0.040630530)       \n",
+      "                                                 \n",
+      "Marital_StatusWidow          -0.041808820        \n",
+      "                             (0.070917780)       \n",
+      "                                                 \n",
+      "Income                      0.000002626***       \n",
+      "                             (0.000000428)       \n",
+      "                                                 \n",
+      "Kidhome                     -0.230863000***      \n",
+      "                             (0.033463980)       \n",
+      "                                                 \n",
+      "Teenhome                     0.060306960**       \n",
+      "                             (0.028629650)       \n",
+      "                                                 \n",
+      "Recency                      -0.000037866        \n",
+      "                             (0.000442221)       \n",
+      "                                                 \n",
+      "MntWines                    0.000439927***       \n",
+      "                             (0.000058041)       \n",
+      "                                                 \n",
+      "MntFruits                     0.000285682        \n",
+      "                             (0.000360583)       \n",
+      "                                                 \n",
+      "MntMeatProducts               0.000036995        \n",
+      "                             (0.000085449)       \n",
+      "                                                 \n",
+      "MntFishProducts              0.000612828**       \n",
+      "                             (0.000289703)       \n",
+      "                                                 \n",
+      "MntSweetProducts            0.001056294***       \n",
+      "                             (0.000353643)       \n",
+      "                                                 \n",
+      "MntGoldProds                0.001339283***       \n",
+      "                             (0.000245533)       \n",
+      "                                                 \n",
+      "NumDealsPurchases           0.058731260***       \n",
+      "                             (0.007448920)       \n",
+      "                                                 \n",
+      "NumCatalogPurchases           0.009201272        \n",
+      "                             (0.006663828)       \n",
+      "                                                 \n",
+      "NumStorePurchases           0.044291260***       \n",
+      "                             (0.005166086)       \n",
+      "                                                 \n",
+      "NumWebVisitsMonth           0.074302560***       \n",
+      "                             (0.007117189)       \n",
+      "                                                 \n",
+      "AcceptedCmp3                  0.027950850        \n",
+      "                             (0.047997650)       \n",
+      "                                                 \n",
+      "AcceptedCmp4                  0.023400770        \n",
+      "                             (0.047497470)       \n",
+      "                                                 \n",
+      "AcceptedCmp5                 -0.079855880        \n",
+      "                             (0.053372400)       \n",
+      "                                                 \n",
+      "AcceptedCmp1                  0.045068750        \n",
+      "                             (0.049867830)       \n",
+      "                                                 \n",
+      "AcceptedCmp2                -0.344034900***      \n",
+      "                             (0.100029700)       \n",
+      "                                                 \n",
+      "Complain                     -0.180364300        \n",
+      "                             (0.175653800)       \n",
+      "                                                 \n",
+      "Response                      0.059834150        \n",
+      "                             (0.037685260)       \n",
+      "                                                 \n",
+      "Constant                     -0.126152000        \n",
+      "                             (0.134659900)       \n",
+      "                                                 \n",
+      "-------------------------------------------------\n",
+      "Observations                     1,660           \n",
+      "Akaike Inf. Crit.           6,499.922000000      \n",
+      "=================================================\n",
+      "Note:                 *p<0.1; **p<0.05; ***p<0.01\n"
      ]
     }
    ],
    "source": [
-    "stargazer_res <- stargazer(reg1, reg2, title = \"Comparison of Multiple Regression Results\",\n",
+    "stargazer_res <- stargazer(reg1, title = \"Comparison of Multiple Regression Results\",\n",
     "         align = TRUE, type=\"text\", keep =  c(), # Specify predictors to keep \n",
     "         digits = 9, keep.stat = c(\"n\",\"rsq\", \"aic\", \"bic\"))"
    ]
