Edited the justification explanation

--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## STAT301 2024W2 Group 26 Project \n",
-    "</br> *Eaven (23540214), Lucas (), Rahul (), Aryan ()*\n",
+    "</br> *Eaven, Lucas, Rahul, Aryan*\n",
     "\n",
     "2025-04-12 <br>\n",
     "\n",
@@ -2514,7 +2514,7 @@
    "metadata": {},
    "source": [
     "### Justification\n",
-    "The code above shows the poisson regression analysis where `NumWebPurchases` is the response variable which represents count data. Poisson regression is specifically designed to model count data which is suitable when the response variable is non-negative integer (e.g. 0, 1, 2...). The method allows us to model the relationship between the count response variable and multiple covariates (e.g. `Income`, `MntGoldProds`, `NumCatalogPurchases` etc.). Although Poisson Regression is good to compare count data, there are still some potential limitations of this method. Overdispersion is **one** potential limitation where the variance of the response variable is greater than the mean, where the regression model may underestimate the standard errors which may lead to invalid statisical inferences. Underdispersion may occur where the variance is less than the mean where the model may not fit well. This will be addressed in the **Robust Analysis & Overdispersion Test Section** below. \n",
+    "The code above shows the poisson regression analysis where `NumWebPurchases` is the response variable which represents count data. Poisson regression is specifically designed to model count data which is suitable when the response variable is non-negative integer (e.g. 0, 1, 2...). The method allows us to model the relationship between the count response variable and multiple covariates (e.g. `Income`, `MntGoldProds`, `NumCatalogPurchases` etc.). Although Poisson Regression is good to compare count data, there are still some potential limitations of this method. Overdispersion is **one** potential limitation where the variance of the response variable is greater than the mean, where the regression model may underestimate the standard errors which may lead to invalid statisical inferences. Underdispersion may occur where the variance is less than the mean where the model may not fit well.\n",
     "\n",
     "Additionally, `ID` has been excluded in this analysis since it's insignificant to the regression since it's for easier recognition of the customer that made the purchases. However, Poisson regression through prediction is very useful for modelling count data `NumWebPurchases` which allows us to explore the relationship between the response variable and various covariates.\n",
     "\n"
