--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -275,7 +275,7 @@
    "source": [
     "## Introduction & Data Description\n",
     "\n",
-    "The assigned dataset for the project is the [Customer Personality Analysis](https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis) found on in this project, the code below show the descriptive summary of the dataset."
+    "The assigned dataset for the project is the Customer Personality Analysis found on In this project, the code below show the descriptive summary of the dataset."
    ]
   },
   {
@@ -2938,4 +2938,15 @@
   },
   "nbformat": 4,
   "nbformat_minor": 4
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.4.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
